# runefix-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README_ja.md  README_zh.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
examples/: README.md  text_align.rs
scripts/: README.md  integrate_char_table.py
src/: atom.rs  consts.rs  ext.rs  grapheme.rs  lib.rs  policy.rs  version.rs  width.rs  with_policy.rs
src/assets/: cjk_unified.json  emoji_base.json  emoji_zwj.json  fullwidth_punctuations.json  fullwidth_variants.json  japanese_kana.json  korean_syllables.json
src/grapheme/: basic.rs  mod.rs  policy_ext.rs
src/rules/: cjk.rs  emoji.rs  hangul.rs  kana.rs  mod.rs  punct.rs  variants.rs
tests/: atom.rs  grapheme.rs  grapheme_test.rs  width.rs  with_policy.rs  with_policy_test.rs
